# RtreeV2

./: CMakeLists.txt  README.md  RTree.h  main.cpp
balanced_queries/: 2d.txt  3d.txt  4d.txt  5d.txt  6d.txt
datasets/: cor_neg_10k_4.csv  cor_neg_1k_2.csv  cor_neg_1k_4.csv  cor_pos_10k_4.csv  dataset_small.csv
queries/: 2d.txt  2d_completo.txt  3d.txt  4d.txt  5d.txt  6d.txt
unbalanced_queries/: 2d.txt  3d.txt  4d.txt  5d.txt  6d.txt
utilities/: k.txt  new_k.txt
